--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "delivery_project_client_new",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000/",
   "dependencies": {
-    "react-scripts": "3.1.2",
     "axios": "^0.19.0",
+    "http-proxy-middleware": "^0.20.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-router-redux": "^4.0.8",
+    "react-scripts": "3.1.2",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-logger": "^3.0.6",
@@ -36,6 +38,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ] 
   }
 }
