--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "delivery_project_client_new",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000/",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
