--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "proxy": "http://localhost:8000",
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^7.3.0",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^3.2.0",
